Add a shutdown hook when playback starts so the media can be stopped in the event that the application exits without calling stop.